# dpwsGW

./: Makefile
ABB/: .svnaccess
ABB/110712/contrib/ws4d-gsoap/src/alt-io/: CMakeLists.txt
ABB/110901/: Makefile
ABB/20110126/: gateway
AccelerationModel_static/src/: AccelerationModel_device.c
AccelerationService/src/: AccelerationServer.c
DataLoggingService/src/: Conversion.h
DeviceInfoService/src/: Conversion.h
MicroStrain/test/: .project
NodeDiscovery_MS/NodeDiscovery/: Program.cs
NodeDiscovery_reflection/NodeDiscovery/: DPWSDevice.cs  NodeDiscovery.csproj  Program.cs  app.config
PSE/DPWSExample/: .project
PSE/edu.teco.dpws.generator/: .classpath  build.properties
SSimpDevice/: .project
SSimpDevice/src-gen/: SSimpDevice_device.c
SensorValuesService/src-gen/: Sample_bin2dom.c  Status_bin2dom.c
VLink_DataLoggingService/src/: Conversion.c
bundles/dpwsGW/tags/releases/ABB/110901/contrib/ws4d-gsoap/src/libdpws/: CMakeLists.txt  ws4d_discovery_ctx.c
bundles/dpwsGW/tags/releases/ABB/110901/contrib/ws4d-gsoap/src/libdpws/gsoap/: wse_2006_02.nsmap
bundles/dpwsGW/tags/releases/ABB/20110301/contrib/ws4d-gsoap/src/samples/: CMakeLists.txt
bundles/dpwsGW/tags/releases/ABB/20110301/contrib/ws4d-gsoap/src/samples/ms-iop/: AttachmentService.h  SimpleService.h
bundles/dpwsGW/tags/releases/ABB/20110301/contrib/ws4d-gsoap/src/samples/peer_tutorial/files/src/: acc.gsoap
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/: AUTHORS  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  INSTALL
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/WS/: DPWS-typemap_2009_01.dat-wsse  devprof_2006_02.gsoap-wsse  devprof_2009_01.gsoap-wsse  mex.wsdl  mex_fixedwsa.xsd  wsdp_2009_01.xsd  wse.wsdl  wse_fixedwsa.xsd  wst_fixedwsa.xsd  xsd.h
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/cmake-modules/: CMakeLists.txt  FindDPWS-C.cmake  FindDPWS-D.cmake  FindGSOAP.cmake  FindGnuSed.cmake  FindPackageMessage.cmake  FindXSLTproc.cmake  TestingMacros.cmake  WS4D-Misc.cmake
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/doc/: CMakeLists.txt  dpws_doxyfile.in
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/include/: CMakeLists.txt  dpws_config.h.in  dpws_peer.h  soap_misc.h  stddpws.h  ws-metadataexchange.h  ws4d_abstract_eprlist.h  ws4d_config.h.in  ws4d_epr.h  ws4d_eprflist.h  ws4d_eprllist.h  ws4d_list.h  ws4d_localizedstring.h  ws4d_misc.h  ws4d_qname.h  ws4d_service.h  ws4d_servicecache.h  ws4d_subscription.h  ws4d_subsmanproxy.h  ws4d_targetcache.h  ws4d_targetservice.h  ws4d_time.h  ws4d_uri.h
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/scripts/: linux_build_and_test.sh  linux_cross_build.sh  rmtrailingws.sh  tab2spaces.sh  windows_build_and_test.bat  ws4d_indent.sh  ws4d_set_version.sh
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/: CMakeLists.txt
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/alt-io/lwip/: CMakeLists.txt  lwipopts.h  soapdefs.h
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/hosting_service/: CMakeLists.txt  example-hosting-metadata.xml  hostingservice_debug.sh  hostingservice_start.sh  hostingservice_stop.sh  start-stop-service.in  start_service.sh  stop_service.sh
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/hosting_service/init.d/: README
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/hosting_service/meta.d/: README
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/libdpws/: dpws_constants.h  ws-addressing_constants.h  ws4d_epr.c  ws4d_epr_kv.c  ws4d_eprflist.c  ws4d_mm.c  ws4d_mutex.c  ws4d_subsmanproxy.c  ws4d_target.c  ws4d_targetservice.c
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/libdpws/gsoap/: debugService.c  devprof_2009_01.gsoap  dpwsC.c-2009_01.patch  dpwsC.c.patch  hostingPeerLib.c  hosting_2006_02.gsoap  hosting_2006_02.gsoap-wsse  hosting_2009_01.gsoap  hosting_2009_01.gsoap-wsse  target_2006_02.gsoap  target_2006_02.gsoap-wsse  target_2009_01.gsoap  ws-addressing.c  ws-discovery_custom.c  ws-eventing.c  wst_2006_02.nsmap
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/life-cycle-manager/: fileio.h  lcm-defs.h  metadata.xml  simple-lcm-client.c
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/hosted_tutorial/: CMakeLists.txt  CMakeLists.txt.in
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/hosted_tutorial/files/src/: CMakeLists.txt  airconditioner.c  event_worker.h  metadata.xml
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/ms-iop/: CMakeLists.txt  EventingService.c  EventingService.h  EventingService.wsdl  SimpleService.c  SimpleService.wsdl  attachment_service_client.c  attachment_service_client.h  description_client.c  description_client.h  eventing_service_client.c  fileio.h  iop_services.h  iop_test_driver.c  server.p12  simple_service_client.c
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/peer_tutorial/: CMakeLists.txt
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/peer_tutorial/files/src/: AirConditionerController.wsdl  CMakeLists.txt  config.h.in  discovery_helper.c  discovery_helper.h
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/tutorial/: CMakeLists.txt.in
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/samples/tutorial/files/src/: CMakeLists.txt  TemperatureEvent_client.c  acs_inv.gsoap  event_worker.c  metadata.xml
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/src/tools/: CMakeLists.txt  hostedMetadataToC.xslt  hostedMetadataToH.xslt  invert.xslt  probe.c  resolve.c  subscribe.c  subsstatus.c  supervisor.c  unsubscribe.c
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/test/: test_support.h
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/test/capabilities/: CMakeLists.txt
bundles/dpwsGW/tags/releases/PSE/contrib/ws4d-gsoap/toolchains/: cris-axis-linux-gnu.cmake
contrib/ws4d-gsoap/src/libdpws/gsoap/: CMakeLists.txt  ws-addressing.c
gateway/: .cproject
gateway/src/: discover.h  main.c  proxy_handler.c  proxy_structures.c
ws4d-required/: .project
(+601 files in other folders)
